--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "bulma": "^0.9.3",
+    "mdb-react-ui-kit": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
